# jax-unittrace

./: README.md  pixi.toml  pyproject.toml
examples/: demo.py
src/jax_unittrace/: __init__.py  result.py  specs.py  tracer.py  units.py
src/jax_unittrace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_partitions.py  test_report.py  test_trace.py  test_units.py
